[tool.poetry]
name = "github-export-tool"
version = "0.1.0"
description = "download everything from a list of github organizations and users"
authors = ["Moritz Makowski <moritz@dostuffthatmatters.dev>"]
readme = "README.md"
packages = [{include = "github-export-tool"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
